--- a/style.css
+++ b/style.css
@@ -103,8 +103,8 @@ body {
 .buttons {
     padding: 30px 24px 31px;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 64px 64px 64px 64px 64px;
+    grid-template-columns: 60px 60px 60px 60px;
     margin-top: 20px;
     row-gap: 13px;
     column-gap: 13px;
@@ -114,7 +114,6 @@ body {
 }
 
 .buttons button {
-    width: 60px;
     height: 64px;
     border-radius: 5px;
     box-shadow: inset 0 -4px 0 0 #b3a497;
@@ -122,11 +121,16 @@ body {
     font-weight: bold;
 }
 
-#equal {
-    grid-column: 3/5;
+.number {
+    
 }
 
 #reset {
     grid-column: 1/3;
-    /* grid-column-end: -1; */
 }
+
+#equal {
+    grid-column: 3/5;
+}
+
+
