--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 }
 
 .theme-button {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -63,11 +64,11 @@ body {
     height: 16px;
     border-radius: 50%;
     background-color: #d03f2f;
-    top: 19%;
-    left: 8%
+    top: 15%;
+    left: 52%
 }
 
-.theme-button button {
+.theme-button input {
     position: relative;
     width: 71px;
     height: 26px;
@@ -103,14 +104,15 @@ body {
 .buttons {
     padding: 30px 24px 31px;
     display: grid;
-    grid-template-rows: 64px 64px 64px 64px 64px;
-    grid-template-columns: 60px 60px 60px 60px;
+    grid-template-rows: repeat(5, 64px);
+    grid-template-columns: repeat(4, 60px);
     margin-top: 20px;
     row-gap: 13px;
     column-gap: 13px;
     align-items: center;
     justify-content:space-around;
     background-color: #242d44;
+    
 }
 
 .buttons button {
@@ -121,8 +123,10 @@ body {
     font-weight: bold;
 }
 
-.number {
-    
+.number,  .math{
+    font-size: 32px;
+    letter-spacing: -0.53px;
+    color: #434a59;
 }
 
 #reset {
@@ -131,6 +135,17 @@ body {
 
 #equal {
     grid-column: 3/5;
+    box-shadow: inset 0 -4px 0 0 #93261a;
+    background-color: #d03f2f;
+    font-size: 20px;
+    color: #ffffff;
+}
+
+#delete, #reset {
+    background-color: #647198;
+    font-size: 20px;
+    color: #ffffff;
+    box-shadow: inset 0 -4px 0 0 #414e73;
 }
 
 
