--- a/style.css
+++ b/style.css
@@ -8,51 +8,73 @@
     font-family: "League Spartan";
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+-webkit-appearance: none;
+}
+
 body {
     min-width: 375px;
-    /* height: 100vh; */
     background-color: #3a4663;
 }
+
+.lightBackground {
+    background-color: #e6e6e6;
+    }
+.darkBackground {
+        background-color: #17062a;
+        }
 .container {
-    width: 100%;
-    height: 100%;
-    padding: 30px 24px 24px 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 24px 24px 24px 24px;
 }
 
-
-.buttons-number {
-    display: flex;
-    position: absolute;
-    right: 32px;
-    justify-content: end;
-    gap:15px;
-    color: #fff;
-    font-weight: bold;
-  }
-
 .up-line {
+    width: 327px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: end;
+    align-items: end;
+    gap: 130px;
     color: #fff;
-    margin-top: 20px ;
-    /* align-items: end; */
+    margin-top: 30px;
+}
+
+.calc {
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: -0.53px;
+}
+
+.theme {
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    justify-content: end;
+    gap: 30px;
 }
 
 .theme-button {
     position: relative;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    gap: 26px;
-}
-
-.up-line p {
-    font-size: 32px;
+    align-content: center;
+    gap: 10px;
+  }
+ 
+.theme-number {
+    display: flex;
+    gap: 25px;
+    color: #fff;
     font-weight: bold;
-    letter-spacing: -0.53px;
-}
+    justify-self: end;
+  }
+
 .theme-button p {
     font-size: 12px;
     letter-spacing: 1px;
@@ -64,24 +86,34 @@ body {
     height: 16px;
     border-radius: 50%;
     background-color: #d03f2f;
-    top: 15%;
-    left: 52%
+    top: 26px;
+    left: 6%;
 }
 
-.theme-button input {
-    position: relative;
-    width: 71px;
-    height: 26px;
+.theme-change-button {
+    appearance: none;
+    width: 75px;
+    height: 24px;
     border: none;
     border-radius: 13px;
-    background-color: #242d44;
+    background:  #242d44;
+    padding: 0 5px 0 5px;
 }
 
+.theme-change-button::-webkit-slider-thumb {
+    appearance: none;
+    
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background-color: #d03f2f;
+}
 
 .result {
+    width: 327px;
     display: flex;
     flex-direction: column;
-    margin-top: 35px;
+    margin-top: 30px;
     background-color: #181f33;
     color: #fff;
     padding: 7px 25px 7px 170px;
@@ -112,7 +144,7 @@ body {
     align-items: center;
     justify-content:space-around;
     background-color: #242d44;
-    
+    border-radius: 10px;
 }
 
 .buttons button {
@@ -139,6 +171,7 @@ body {
     background-color: #d03f2f;
     font-size: 20px;
     color: #ffffff;
+    letter-spacing: -0.33px;
 }
 
 #delete, #reset {
@@ -146,6 +179,70 @@ body {
     font-size: 20px;
     color: #ffffff;
     box-shadow: inset 0 -4px 0 0 #414e73;
+    letter-spacing: -0.33px;
+}
+
+
+
+@media screen and (min-width: 1440px){
+    /* .container {
+        height: 100vh;
+        margin-bottom: 30px;
+        overflow-y: hidden;
+    } */
+
+    .buttons-number {
+        top: 50px;
+        right: 460px;
+    }
+
+    .up-line {
+        width: 540px;
+        gap: 335px;
+        margin-top: 30px;
+    }
+
+    .result {
+        width: 540px;
+        height: 128px;
+        padding: 5px 25px 5px 170px;
+        gap: 10px;
+        margin-top: 10px;
+    }
+
+    .final-result {
+        font-size: 56px;
+    }
+
+    .current-actions {
+        font-size: 30px;
+    }
+
+    .buttons {
+        width: 540px;
+        height: 450px;
+        grid-template-columns: repeat(4, 101px);
+        row-gap: 20px;
+        column-gap: 24px;
+    }
+
+    .number,  .math{
+        font-size: 40px;
+        letter-spacing: -0.67px;
+    }
+        
+    #delete, #reset, #equal {
+        font-size: 28px;
+        letter-spacing: -0.47px;
+    }
+
+    .buttons button {
+        border-radius: 10px;
+    }
+    
+
+    
+
 }
 
 
