--- a/style.css
+++ b/style.css
@@ -18,12 +18,6 @@ body {
     background-color: #3a4663;
 }
 
-.lightBackground {
-    background-color: #e6e6e6;
-    }
-.darkBackground {
-        background-color: #17062a;
-        }
 .container {
     display: flex;
     flex-direction: column;
@@ -150,22 +144,24 @@ body {
 .buttons button {
     height: 64px;
     border-radius: 5px;
-    box-shadow: inset 0 -4px 0 0 #b3a497;
-    background-color: #eae3dc;
     font-weight: bold;
 }
 
-.number,  .math{
+.number,  .arithmeticOperations{
     font-size: 32px;
     letter-spacing: -0.53px;
     color: #434a59;
+    box-shadow: inset 0 -4px 0 0 #b3a497;
+    background-color: #eae3dc;
+    font-weight: bold;
+    border: none;
 }
 
-#reset {
+.reset {
     grid-column: 1/3;
 }
 
-#equal {
+.equal {
     grid-column: 3/5;
     box-shadow: inset 0 -4px 0 0 #93261a;
     background-color: #d03f2f;
@@ -174,12 +170,91 @@ body {
     letter-spacing: -0.33px;
 }
 
-#delete, #reset {
-    background-color: #647198;
+.delete, .reset {
     font-size: 20px;
     color: #ffffff;
     box-shadow: inset 0 -4px 0 0 #414e73;
+    background-color: #a2b2e1;
     letter-spacing: -0.33px;
+}
+
+
+     /* dark  */
+
+.dark .container {
+    background-color: #17062a;
+    }
+
+.dark .result,
+.dark .buttons  {
+    background-color: #1e0936;   
+    }
+
+.dark .calc, 
+.dark .number, 
+.dark .arithmeticOperations,
+.dark .theme p,
+.dark .final-result {
+    color: #ffe53d;
+    }
+
+.dark .number,
+.dark .arithmeticOperations {
+    box-shadow: inset 0 -4px 0 0 #881c9e;
+    background-color: #331c4d;
+    }
+
+.dark .delete, 
+.dark .reset {
+    box-shadow: inset 0 -4px 0 0 #be15f4;
+    background-color: #56077c;
+}
+
+.dark .equal,
+.dark .theme-change-button::-webkit-slider-thumb{
+    box-shadow: inset 0 -4px 0 0 #6cf9f1;
+  background-color: #00ded0;
+  color: black;
+}
+
+/* light */
+
+.light .container {
+    background-color: #e6e6e6;
+    }
+
+.light .result{
+    background-color: #eeeeee;
+}
+.light .buttons, .light .theme-change-button   {
+    background-color: #d2cdcd;   
+    }
+
+.light .calc, 
+.light .number, 
+.light .arithmeticOperations,
+.light .theme p,
+.light .final-result {
+    color: #36362c;
+    }
+
+.light .number,
+.light .arithmeticOperations {
+    box-shadow: inset 0 -4px 0 0 #a79e91;
+    background-color: #e5e4e1;
+    }
+
+.light .delete, 
+.light .reset {
+    box-shadow: inset 0 -4px 0 0 #1b6066;
+  background-color: #62b5bc;
+}
+
+.light .equal,
+.light .theme-change-button::-webkit-slider-thumb{
+    box-shadow: inset 0 -4px 0 0 #873901;
+  background-color: #ff8a38;
+  color: #fff;
 }
 
 
@@ -231,7 +306,7 @@ body {
         letter-spacing: -0.67px;
     }
         
-    #delete, #reset, #equal {
+    .delete, .reset, .equal {
         font-size: 28px;
         letter-spacing: -0.47px;
     }
