--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ body {
     font-weight: bold;
     border: none;
 }
-.number:hover {
+.number:hover, .arithmeticOperations:hover {
     background-color: #fffffe;
 }
 
